--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Produkt-Shop (App-Feeling)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Security Headers (client-side meta, besser serverseitig setzen) -->
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; script-src 'self' https://cdn.tailwindcss.com https://cdn.jsdelivr.net; object-src 'none'; base-uri 'self'; frame-ancestors 'self';">
+
   <!-- Tailwind CSS (Cascading Style Sheets) via CDN: keine Installation nötig -->
   <script src="https://cdn.tailwindcss.com"></script>
 
