--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   default-src 'self';
   connect-src 'self';
   style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
-  script-src 'self' https://cdn.tailwindcss.com https://cdn.jsdelivr.net;
+  script-src 'self' 'unsafe-eval' https://cdn.tailwindcss.com https://cdn.jsdelivr.net;
   object-src 'none';
   base-uri 'self';
 ">
-  ">
 
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -122,4 +121,5 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
 
