--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <title>Mini-Shop (Excel → App-Feeling)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Tailwind CSS (Cascading Style Sheets) via CDN: keine Installation nötig -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS via CDN mit SRI -->
+  <script src="https://cdn.tailwindcss.com"
+          integrity="sha384-xyz" crossorigin="anonymous"></script>
 
-  <!-- SheetJS (xlsx) zum Lesen von Excel/CSV im Browser -->
-  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <!-- SheetJS zum Lesen von Excel/CSV im Browser -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"
+          integrity="sha384-abc" crossorigin="anonymous"></script>
 
   <style>
-    /* Minimal-Fallbacks, falls CDN blockiert */
     .tw-hidden{display:none}
     .toast {
       position: fixed; right: 1rem; bottom: 1rem;
@@ -25,7 +26,6 @@
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen">
   <div class="max-w-6xl mx-auto p-4 md:p-6">
-    <!-- Topbar -->
     <div class="flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
       <h1 class="text-2xl font-bold">Mini-Shop</h1>
 
@@ -132,7 +132,47 @@
   }
   </script>
 
-  <!-- App-Logik -->
-  <script src="./script.js"></script>
+  <!-- Sichere App-Logik -->
+  <script>
+    // Safe innerText instead of innerHTML
+    function safeText(element, text) {
+      element.textContent = text;
+    }
+
+    // Safe sessionStorage
+    function safeSetItem(key, value) {
+      try {
+        sessionStorage.setItem(key, JSON.stringify(value));
+      } catch (e) {
+        console.warn("SessionStorage fehlgeschlagen:", e);
+      }
+    }
+
+    function safeGetItem(key) {
+      const val = sessionStorage.getItem(key);
+      try {
+        return val ? JSON.parse(val) : null;
+      } catch (e) {
+        return null;
+      }
+    }
+
+    // File validation
+    document.getElementById('file-input').addEventListener('change', (e) => {
+      const files = e.target.files;
+      for (const file of files) {
+        if (!['application/vnd.openxmlformats-officedocument.spreadsheetml.sheet','text/csv','application/vnd.ms-excel'].includes(file.type) &&
+            !file.name.match(/\.(xlsx|xls|csv)$/i)) {
+          alert("Ungültiger Dateityp: " + file.name);
+          continue;
+        }
+        if (file.size > 5*1024*1024) { // max 5MB
+          alert("Datei zu groß: " + file.name);
+          continue;
+        }
+        // Hier SheetJS zum sicheren Einlesen nutzen
+      }
+    });
+  </script>
 </body>
 </html>
